fix promo spacing

--- a/css/style.less
+++ b/css/style.less
@@ -1348,10 +1348,10 @@ footer.entry-meta {
 	h2 {
 		.condensed;
 		.text-shadow(0 0 10px black);
-		font-size: 24px;
+		font-size: 26px;
 		color: @white;
 		padding: 15px;
-		margin: 0;
+		margin: 0!important;
 	}
 	a:hover {
 		border-color: @yellow;
